<resources>
    <string name="app_name">Task Management App</string>
    <string name="login_title">Welcome</string>
    <string name="auth_username_hint">Username</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_action_continue">Continue</string>
    <string name="auth_switch_to_register">Don\'t have an account? Sign up here.</string>
    <string name="auth_switch_to_login">Already have an account? Log in here.</string>
    <string name="auth_title_login">Login</string>
    <string name="auth_title_register">Register</string>
    <string name="auth_action_login">Login</string>
    <string name="auth_action_register">Register</string>
    <string name="home_title">Home</string>
    <string name="home_subtitle">You are logged in. This is a placeholder home screen.</string>
    <string name="home_analytics_title">Weekly Activity Analytics</string>
    <string name="home_analytics_placeholder">Chart placeholder</string>
    <string name="home_recent_title">Recent Activities</string>
    <string name="home_recent_goals_title">Recent goals</string>
    <string name="home_add_task">Add task</string>
    <string name="home_add_action_title">Quick actions</string>
    <string name="home_action_set_goal">Set goal</string>
    <string name="home_action_add_workout_log">Add workout log</string>
    <string name="home_show_all">Show all</string>
    <string name="home_show_all_goals_placeholder">Show all goals (coming soon)</string>
    <string name="home_show_all_activities_placeholder">Show all activities (coming soon)</string>
    <string name="home_logout">Logout</string>
    <string name="activities_title">All Activities</string>
    <string name="activities_placeholder">Activity list placeholder</string>
    <string name="goal_set_title">Set Goal</string>
    <string name="goal_set_placeholder">Goal setup screen placeholder</string>
    <string name="workout_log_title">Workout Log</string>
    <string name="workout_log_placeholder">Workout log screen placeholder</string>
    <string name="workout_log_form_title">Add workout log</string>
    <string name="workout_log_activity_type_label">Activity type</string>
    <string name="workout_log_duration_label">Duration (in minutes)</string>
    <string name="workout_log_metric_label">Metric</string>
    <string name="workout_log_metric_value_label">Metric value</string>
    <string name="workout_log_metric_unit_label">Metric unit</string>
    <string name="workout_log_date_label">Date (YYYY-MM-DD)</string>
    <string name="workout_log_calories_label">Calories</string>
    <string name="workout_log_location_label">Location</string>
    <string name="workout_log_submit">Submit</string>
    <string name="workout_log_date_picker_title">Select date</string>
    <string name="goal_set_form_title">Add goal</string>
    <string name="goal_set_name_label">Goal name</string>
    <string name="goal_set_activity_type_label">Activity type</string>
    <string name="goal_set_target_value_label">Target value</string>
    <string name="goal_set_target_metric_label">Target metric</string>
    <string name="goal_set_target_metric_unit_label">Target unit</string>
    <string name="goal_set_deadline_label">Target date (YYYY-MM-DD)</string>
    <string name="goal_set_notes_label">Notes</string>
    <string name="goal_set_submit">Submit</string>
    <string name="goal_set_date_picker_title">Select target date</string>
    <string name="goals_title">Goals</string>
</resources>